WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
250172
[UI-side compositing] Fix 2-up shrink mode to work with UI-side compositing
https://bugs.webkit.org/show_bug.cgi?id=250172
Summary
[UI-side compositing] Fix 2-up shrink mode to work with UI-side compositing
Nikos Mouchtaris
Reported
2023-01-05 18:03:28 PST
[UI-side compositing] Fix 2-up shrink mode to work with UI-side compositing
Attachments
Add attachment
proposed patch, testcase, etc.
Nikos Mouchtaris
Comment 1
2023-01-05 18:11:30 PST
<
rdar://problem/103373463
>
Nikos Mouchtaris
Comment 2
2023-01-05 18:23:37 PST
Pull request:
https://github.com/WebKit/WebKit/pull/8272
EWS
Comment 3
2023-01-06 14:48:18 PST
Committed
258565@main
(f4154cb024ec): <
https://commits.webkit.org/258565@main
> Reviewed commits have been landed. Closing PR #8272 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug