[UI-side compositing] Fix 2-up shrink mode to work with UI-side compositing https://bugs.webkit.org/show_bug.cgi?id=250172 <rdar://103373463>

Reviewed by Simon Fraser.

Move TiledCoreAnimationDrawingArea::scaleViewToFitDocumentIfNeeded to DrawingArea
so that it can be called in RemoteLayerTreeDrawingArea as well. Call is added to
RemoteLayerTreeDrawingArea::updateRendering.

* Source/WebKit/WebProcess/WebPage/DrawingArea.cpp:
(WebKit::DrawingArea::setShouldScaleViewToFitDocument):
(WebKit::DrawingArea::scaleViewToFitDocumentIfNeeded):
* Source/WebKit/WebProcess/WebPage/DrawingArea.h:
(WebKit::DrawingArea::setShouldScaleViewToFitDocument): Deleted.
* Source/WebKit/WebProcess/WebPage/RemoteLayerTree/RemoteLayerTreeDrawingArea.mm:
(WebKit::RemoteLayerTreeDrawingArea::updateRendering):
* Source/WebKit/WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.h:
* Source/WebKit/WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.mm:
(WebKit::TiledCoreAnimationDrawingArea::setShouldScaleViewToFitDocument): Deleted.
(WebKit::TiledCoreAnimationDrawingArea::scaleViewToFitDocumentIfNeeded): Deleted.

Canonical link: https://commits.webkit.org/258565@main